# online-training

./: LICENSE  README.md  app.py  pyproject.toml
templates/: home.html
